# nina

./: .gitignore  Cargo.toml  README.md  build.rs  nina.toml.example
skills/coding-agent/: SKILL.md
skills/tmux/: SKILL.md
skills/weather/: SKILL.md
src/: agent.rs  config.rs  conversation.rs  gateway.rs  identity.rs  llm.rs  main.rs  memory.rs  pairing.rs  reminders.rs  scheduler.rs  self_awareness.rs  session.rs  setup.rs  telegram.rs  timer.rs  tts.rs
src/channel/: mod.rs  telegram.rs
src/skills/: current_time.rs  files.rs  lua.rs  markdown.rs  memory.rs  mod.rs  relation.rs  reminders.rs  sessions_send.rs  shell.rs  tts.rs  web.rs
src/tools/: exec.rs  memory.rs  mod.rs  web_fetch.rs
